# my-apple-mail-cli

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
src/mxctl/: __init__.py  api.py  config.py  main.py
src/mxctl/commands/mail/: accounts.py  actions.py  ai.py  analytics.py  attachments.py  batch.py  brief.py  compose.py  composite.py  deadline_scan.py  inbox_tools.py  manage.py  messages.py  setup.py  system.py  templates.py  todoist_integration.py  undo.py
src/mxctl/util/: applescript.py  applescript_templates.py  formatting.py  mail_helpers.py
src/my_cli/: __init__.py  config.py  main.py
src/my_cli/commands/mail/: __init__.py  accounts.py  actions.py  ai.py  analytics.py  attachments.py  batch.py  compose.py  composite.py  inbox_tools.py  manage.py  messages.py  setup.py  system.py  templates.py  todoist_integration.py  undo.py
src/my_cli/util/: applescript.py  applescript_templates.py  formatting.py  mail_helpers.py
tests/: conftest.py  test_100_coverage.py  test_ai_classification.py  test_applescript.py  test_commands.py  test_compose_batch_errors.py  test_config.py  test_count.py  test_dates.py  test_deadline_scan_and_brief.py  test_error_paths.py  test_final_coverage.py  test_mail_helpers.py  test_manage.py  test_new_coverage.py  test_resolve_context.py  test_setup.py  test_stats_undo.py  test_templates.py  test_wave1_coverage.py
