[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-cli"
version = "0.2.0"
description = "A comprehensive command-line interface for Apple Mail on macOS"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Jscoats"}]

[project.urls]
Homepage = "https://github.com/Jscoats/my-apple-mail-cli"
Repository = "https://github.com/Jscoats/my-apple-mail-cli"
Issues = "https://github.com/Jscoats/my-apple-mail-cli/issues"

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
my = "my_cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
