[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mxctl"
version = "0.4.2"
description = "Apple Mail from your terminal"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Jscoats"}]
keywords = ["apple-mail", "cli", "macos", "email", "terminal", "applescript", "productivity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/Jscoats/mxctl"
Repository = "https://github.com/Jscoats/mxctl"
Issues = "https://github.com/Jscoats/mxctl/issues"
Changelog = "https://github.com/Jscoats/mxctl/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "pre-commit"]

[project.scripts]
mxctl = "mxctl.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mxctl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["mxctl"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
target-version = "py310"
line-length = 140
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "SIM105", "SIM108"]
